Initial Cake build script

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ build/
 # Ignore output folder named package
 package/
 
+# tools are downloaded automatically
+tools/
+# This is what controls the download
+!tools/packages.config
+
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
 # Disable NuGet packages folder
